# struckout

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  e  install-opencv.sh  justfile  system_architecture.md  transport_protocol.md
.github/: dependabot.yml
.github/workflows/: android_ci.yaml  android_ci.yml  rust_ci.yml
UnityProject/StruckOut/: StruckOut.slnx
UnityProject/UserSettings/Layouts/: default-6000.dwlt
api/proto/: collision.proto  master_and_projector.proto  struckout.proto  xtask_sync.proto
api/rust/: Cargo.toml  build.rs
api/rust/src/: lib.rs
api/spec/: master_projector.yaml  tracker_camera_tcp.yaml  tracker_camera_udp.yaml  tracker_projector.yaml  xtask-sync_camera.yaml
ball_watcher/: .gitignore  Cargo.toml  README.md  build.rs
ball_watcher/protocol/: struckout.proto
ball_watcher/src/: data_association.rs  kalman.rs  lib.rs  main.rs  transport.rs  triangulate.rs  types.rs
ball_watcher/src/collision_output/: csv.rs  mod.rs  network.rs
ball_watcher/src/detection_input/: db.rs  mod.rs  network.rs  sqlite.rs
ball_watcher/src/tracking/: data_association.rs  event.rs  kalman.rs  mod.rs  triangulate.rs
esp32-rs/: Cargo.toml
esp32-rs/src/: lib.rs
game_master/: .gitignore  Cargo.toml  README.md  build.rs  expand.rs
game_master/.devcontainer/: Dockerfile  devcontainer.json
game_master/migrations/: 20260609150600_struckout.sql
game_master/resources/: 99-struckout-mcu-esp.rules
game_master/src/: lib.rs  main.rs  nav.rs  player_repository.rs  session.rs  state_ext.rs  worker.rs
game_master/src/data/: mod.rs  player.rs  projector.rs
game_master/src/data/projector/: impls.rs  mod.rs
game_master/src/name_input/: mod.rs  name-input-screen.slint
game_master/src/presentation/: app-window.slint  icons.slint  mod.rs  top-bar.slint
game_master/src/presentation/connecting/: connecting-screeen.slint  connecting-screen.slint  mod.rs
game_master/src/presentation/connection_failed/: connection-failed-screen.slint  mod.rs
game_master/src/presentation/difficulity_select/: difficulity-select-screen.slint  mod.rs
game_master/src/presentation/fallback/: fallback-screen.slint  mod.rs
game_master/src/presentation/name_input/: mod.rs  name-input-screen.slint
game_master/src/presentation/playing/: mod.rs  playing-screen.slint
game_master/src/presentation/ranking/: mod.rs  ranking-screen.slint
game_master/src/presentation/score/: mod.rs  score-screen.slint
game_master/src/presentation/start/: mod.rs  start-screen.slint
game_master/src/viewmodels/: start_screen.rs
game_master/ui/: app-window.slint  difficulity-select-screen.slint  icons.slint  name-input-screen.slint  playing-screen.slint  score-screen.slint  start-screen.slint
mcu/: Cargo.toml  README.md  cargo  coordinate_calculation.md  justfile
mcu/.cargo/: config.toml
mcu/.devcontainer/: Dockerfile  devcontainer.json
mcu/app_esp32/: Cargo.toml
mcu/app_esp32/.cargo/: config.toml
mcu/app_esp32/.devcontainer/: Dockerfile  devcontainer.json
mcu/app_linux/: Cargo.toml
mcu/app_linux/src/: main.rs
mcu/core/: Cargo.toml  build.rs
mcu/core/src/: collision_point.rs  fmt.rs  lib.rs  transport.rs  types.rs
mcu/crates/app/: Cargo.toml  build.rs
mcu/crates/app/.cargo/: config.toml
mcu/crates/app/src/: ble.rs  lib.rs
mcu/crates/core/: Cargo.toml
mcu/crates/core/src/: fmt.rs  lib.rs  types.rs
mcu/resources/: 99-struckout-mcu-esp.rules
mcu/src/: ble.rs  fmt.rs  lib.rs  types.rs
migrations/: 20260703054817_initial-migration.sql
projector/: .gitignore  Cargo.toml
projector/.devcontainer/: Dockerfile  devcontainer.json
projector/AIDocumentation/: Explain.md
projector/Assets/: UniversalRenderPipelineGlobalSettings.asset
projector/Assets/Prefab/: CircleTarget.prefab
projector/Assets/Scenes/: SampleScene.unity
projector/Assets/Scripts/Application/: GameRuntime.cs  GameRuntimeState.cs
projector/Assets/Scripts/Application/Interface/: ICollisionSolver.cs  IMessageParser.cs  IPacketRouter.cs  IParser.cs  ITargetGenerator.cs
projector/Assets/Scripts/Bootstrap/: GameBootstrap.cs  NetworkBootStrap.cs  RootBootstrap.cs  RuntimeContext.cs
projector/Assets/Scripts/Domain/: ConnectionState.cs  ConnectionStateMachine.cs  NetworkConnectionResult.cs
projector/Assets/Scripts/Domain/TargetDefinition/: Target.cs  TargetCoordinate.cs  TargetType.cs
projector/Assets/Scripts/Infrastructure/: CollisionSolver.cs  PacketRouter.cs  TargetGenerator.cs
projector/Assets/Scripts/Infrastructure/Fake/: FakeClientService.cs  FakeMasterService.cs  FakeSensorProvider.cs  FakeTargetGenerator.cs
projector/Assets/Scripts/Infrastructure/TCP/: MasterPacketParser.cs  ProjectorPacketParser.cs  TCPClientBase.cs
projector/Assets/Scripts/Unity/: CircleTargetUI.cs  GameLifetimeScope.cs  ITargetUI.cs  MainThreadDispatcher.cs  Struckout.Unity.asmdef  UIRoot.cs  UIService.cs
projector/src/: main.rs
projector/ui/: app-window.slint
projector_Unity/: .gitignore  StruckOut.slnx  projector_Unity.slnx
projector_Unity/Assets/: packages.config
projector_Unity/Assets/Prefab/: Circle.prefab  CircleTarget.prefab
projector_Unity/Assets/Scenes/: SampleScene.unity
projector_Unity/Assets/Scripts/Application/: Game.cs  (+7 more)
projector_Unity/ProjectSettings/: ProjectSettings.asset
protocol/: buf.yaml  collision.proto  debug.proto  master_and_projector.proto  struckout.proto
struckout-rs/: Cargo.toml
struckoutCameraApp/: .gitignore  .gitignore.swp  README.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
struckoutCameraApp/app/: build.gradle.kts
struckoutCameraApp/gradle/: libs.versions.toml
struckoutCameraApp/opencv/: build.gradle
testTCP/: Cargo.toml  build.rs
testTCP/src/: main.rs
testTcpCLI/: Program.cs  testTcpCLI.csproj
testTcpCLI/Network/: IClientService.cs  IMessageParser.cs  TCPClientBase.cs
testgRPC/: Program.cs  testgRPC.csproj
xtask/: Cargo.toml  build.rs  sqlx.toml
xtask/migrations/: 20260628043017_struckout.sql  20260702084858_add-test-table.sql  20260703020632_drop-test-table.sql
xtask/src/: lib.rs  main.rs  sync.rs
(+191 files in other folders)
