[workspace]
members = ["xtask", "game_master", "ball_watcher"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
prost = "0.14.3"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

anyhow = "1.0"
thiserror = "2.0.18"
approx = "0.5.1"
bytes = "1.11.1"
chrono = "0.4.44"
rand = "0.10.1"
parking_lot = "0.12.5"
clap = "4.6.1"
sqlx = "0.9.0"
dirs = "6.0.0"

prost-build = "0.14.3"

[profile.dev.package.sqlx-macros]
opt-level = 3
