[workspace]
members = ["xtask", "game_master", "ball_watcher", "api/rust"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
struckout-proto = { path = "./api/rust/" }

tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
futures-util = "0.3"
tokio-util = "0.7"
backon = "1.6.0"
tokio-stream = "0.1"

anyhow = "1.0"
thiserror = "2.0.18"
approx = "0.5.1"
bytes = "1.11.1"
chrono = "0.4.44"
rand = "0.10.1"
uuid = "1.23.4"
itertools = "0.15.0"
parking_lot = "0.12.5"
clap = "4.6.1"
sqlx = "0.9.0"
dirs = "6.0.0"
tempfile = "3"
serde = "1.0"
serde_json = "1.0"
derive_more = "2.1.1"
derive-getters = "0.5.0"
pastey = "0.2.3"
strum = "0.28.0"
enum_dispatch = "0.3.13"

prost = "0.14.3"
prost-build = "0.14.3"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.slint-build]
opt-level = 3

[profile.dev.package.slint]
opt-level = 3
