[package]
name = "ball_watcher"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
struckout-proto = { workspace = true }

nalgebra = { version = "0.34.2" }
tracktor = "0.4.1"

prost = { workspace = true }
prost-types = { version = "0.14.3", features = ["chrono"] }

tokio = { workspace = true, features = [
    "net",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }

clap = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }

[features]

[build-dependencies]
prost-build = { workspace = true }
