[package]
name = "ball_watcher"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
struckout-proto = { workspace = true }

nalgebra = { version = "0.34.2" }
tracktor = "0.4.1"

prost = { workspace = true }
prost-types = { version = "0.14.3", features = ["chrono"] }

tokio = { workspace = true, features = [
    "net",
    "rt-multi-thread",
    "macros",
    "sync",
    "io-util",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
backon = { workspace = true }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
approx = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
itertools = { workspace = true }
tempfile = { workspace = true }

clap = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
    "sqlx-toml",
] }

[features]

[build-dependencies]
prost-build = { workspace = true }
