[package]
edition = "2024"
name = "esp32-rs"
rust-version = "1.88"
version = "0.1.0"

[[bin]]
name = "esp32-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-println = { git = "https://github.com/lulf/esp-hal", rev = "49ba429e34266bcac867b968e0a55b433d5a7c37", features = [
  "esp32",
  "log-04",
] }
esp-hal = { git = "https://github.com/lulf/esp-hal.git", rev = "49ba429e34266bcac867b968e0a55b433d5a7c37", features = [
  "esp32",
  "unstable",
] }
esp-rtos = { git = "https://github.com/lulf/esp-hal.git", rev = "49ba429e34266bcac867b968e0a55b433d5a7c37", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }
esp-bootloader-esp-idf = { git = "https://github.com/lulf/esp-hal.git", rev = "49ba429e34266bcac867b968e0a55b433d5a7c37", features = [
  "esp32",
] }
esp-alloc = { git = "https://github.com/lulf/esp-hal.git", rev = "49ba429e34266bcac867b968e0a55b433d5a7c37" }
esp-radio = { git = "https://github.com/lulf/esp-hal", rev = "49ba429e34266bcac867b968e0a55b433d5a7c37", features = [
  "ble",
  "esp-alloc",
  "esp32",
  "unstable",
] }

embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embassy-futures = "0.1.2"
embassy-sync = "0.8.0"
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
trouble-host = { git = "https://github.com/embassy-rs/trouble", features = [
  "gatt",
] }
bt-hci = "0.8.1"


critical-section = "1.2.0"
static_cell = "2.1.1"
log = "0.4.29"
heapless = "0.9.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
