[package]
name = "game_master"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
struckout-proto = { workspace = true }

tokio = { workspace = true, features = [
    "rt-multi-thread",
    "sync",
    "net",
    "io-util",
    "macros",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
backon = { workspace = true }
tokio-stream = { workspace = true }
parking_lot = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
itertools = { workspace = true }

sqlx = { workspace = true, features = [
    "sqlite",
    "runtime-tokio",
    "migrate",
    "sqlx-toml",
] }

slint = { version = "1.17.1", features = [
    "backend-winit",
    "renderer-femtovg-wgpu",
] }

[build-dependencies]
slint-build = { version = "1.17.1" }
