[workspace]
members = ["crates/app", "crates/core"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
struckout-mcu-core = { path = "crates/core" }

heapless = "0.9.3"
bt-hci = "0.8.1"

embassy-sync = "0.8.0"
embassy-futures = "0.1.2"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
