[package]
name = "struckout-projector"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { git = "https://github.com/taichi765/slint" }

serialport = "4.9.0"

[build-dependencies]
slint-build = { git = "https://github.com/taichi765/slint" }

[profile.release]
codegen-units = 1
lto = true
